# HeightMap

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
HeightMap/: CMakeLists.txt  image.cpp  image.h  main.cpp  rgba.h  settings.cpp  settings.h  view.cpp  view.h
